add_executable(Canny_edge_Demo Canny_edge_Demo.cpp)
add_executable(Canny_edge_Student Canny_edge_Student.cpp)
add_executable(DLIP_Tutorial_CornerDetection DLIP_Tutorial_CornerDetection.cpp)
add_executable(Hough_Circle_Demo Hough_Circle_Demo.cpp)
add_executable(Hough_Line_Transform_Student Hough_Line_Transform_Student.cpp)
add_executable(Houghline_Demo Houghline_Demo.cpp)
add_executable(HoughCircle_Exercise HoughCircle_Exercise.cpp)
add_executable(Corner_Tracking Corner_Tracking.cpp)
add_executable(Optimal_Flow Optimal_Flow.cpp)